--- a/src/assets/css/socials.css
+++ b/src/assets/css/socials.css
@@ -26,7 +26,7 @@ a.svg:after {
   left: 0;
 }
 .whatsapp:hover {
-  background-color: #1BD741;
+  background-color: #18B111;
 }
 .tiktok:hover {
   background-color: #FD3E3E;  
@@ -50,4 +50,10 @@ a.svg:after {
 }
 .github:hover {
   background-color: #000000;
+}
+.telegram:hover {
+  background-color: #299BD5;
+}
+.spotify:hover {
+  background-color: #08DF53;
 }
