--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -41,3 +41,15 @@
     font-size: 1rem;
   }
 }
+
+.animate-home-component {
+  animation-duration: 3s;
+  animation-name: animate-fade;
+  animation-delay: .5s;
+  animation-fill-mode: backwards;
+}
+
+@keyframes animate-fade {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
